change script dir

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 
     Bonus exercise!
 
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="build/bundle.js"></script>
   </body>
 </html>
