movie collection soon to be implemented

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <h2>Movie collections</h2>
 
-    Bonus exercise!
+    Not yet implemented!
 
     <script type="module" src="build/bundle.js"></script>
   </body>
